test/1.2/errors/T_ENCONST.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

// bug 23664 (early use of size_t)
/// ERROR ENCONST
constant xyz = 1 + sizeoftype(int);
/// ERROR ENCONST
constant x = $dev.obj->name;

extern int f(void);
extern int j;

// Bug 18308
bank b {
    register r[2] size 4 @ 4*$i {
        /// ERROR ENCONST
        if (j == 0) {
        }
    }
    register r3 size 1 @ undefined {
        /// ERROR ENCONST
        parameter internal = j == 0;
    }

    // for bitsize, which is calculated from size by dml-builtins
    /// ERROR ENCONST dml-builtins.dml
    register r2
        /// ERROR ENCONST
        size f() @ undefined;

    register r4 size 4 @ undefined {
        /// ERROR ENCONST
        field f[j];
    }
}

method init() {
    local int i;
    /// ERROR ENCONST
    #i;

    local bitfields 32 {
        /// ERROR ENCONST
        uint1 a @ [i : 0];
    } x;
}
